k8s/apps/flux-system/flux-instance/app/github/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-receiver
  namespace: flux-system
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 404"
spec:
  hostnames:
    - github-webhook.uni.lucadev.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
